--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,7 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">WELCOME</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
@@ -246,8 +245,26 @@
     <string name="contact_us">Contact Us</string>
     <string name="about_us">About Us</string>
     <string name="addButton">Add New Address</string>
+    <string name="add_address">Add Address</string>
+    <string name="choose_address">Choose Address</string>
     <string name="others">Others</string>
     <string name="title_activity_main_category">MainCategoryActivity</string>
 
     <string name="logo">logo</string>
+    <string name="my_info">My Information</string>
+    <string name="mr">Mr.</string>
+    <string name="mrs">Mrs.</string>
+    <string name="miss">Miss</string>
+    <string name="nameHint">Name</string>
+    <string name="emailHint">Email</string>
+    <string name="houseHint">Flat, House, Office No, Building, Company</string>
+    <string name="areaHint">Area, Colony, Sector, Street</string>
+    <string name="cityHint">City</string>
+    <string name="nickname">Nickname of your Address</string>
+    <string name="continueBtn">Continue</string>
+    <string name="home">Home</string>
+    <string name="office">Office</string>
+    <string name="other">Other</string>
+    <string name="txtLogin">We will send a SMS with a confirmation code to the number.</string>
+    <string name="txtVerify">Please enter 4 digit code sent on you number</string>
 </resources>
