--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -264,10 +264,19 @@
     <string name="home">Home</string>
     <string name="office">Office</string>
     <string name="other">Other</string>
-    <string name="txtLogin">We will send a SMS with a confirmation code to the number.</string>
-    <string name="txtVerify">Please enter 4 digit code sent on you number</string>
     <string name="google_maps_API_key">AIzaSyBVRc10PbthEtGm-8QKWC230NH4Rr-6jr4</string>
     <string name="searchBarHint">Enter Address, City or Zip Code</string>
     <string name="selectBtn">Select Location</string>
     <string name="closeBtn">Close Map</string>
+    <string name="select_location">Select Your Location</string>
+
+    <string name="title_login">Login</string>
+    <string name="title_verify">Verify</string>
+    <string name="txt_login">We will send a SMS with a confirmation code to the number.</string>
+    <string name="txt_verify"> Please enter 4 digit code sent on your number</string>
+    <string name="previous_activity">Direct to previous activity.</string>
+    <string name="btn_verify">Verify</string>
+    <string name="btn_next">Next</string>
+    <string name="hint_phone">Mobile</string>
+    <string name="hint_code">0000</string>
 </resources>
