--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -291,4 +291,40 @@
     <string name="txt_delivered">Delivered by Intelli Supermart</string>
     <string name="product_image">Product Image</string>
     <string name="product_rate">*4.5</string>
+
+    <string name="amount_payable">Amount Payable</string>
+    <string name="incl_of_all_taxes">(incl. of all taxes)</string>
+    <string name="promo_code">Add Promo Code &amp; Offers</string>
+    <string name="cash_on_delivery">Cash On Delivery</string>
+    <string name="pay_your_cash">Please pay amount to the delivery executive</string>
+    <string name="place_order">Place Order</string>
+    <string name="yayyy_order_successfully_placed">Yay! Order successfully placed</string>
+    <string name="order_id_122333">Order ID: 122333</string>
+    <string name="schedule_delivery_date_and_time">Schedule Delivery Date &amp; Time</string>
+    <string name="tomorrow_10_00_am_10_00_pm">Tomorrow 10:00 AM - 10:00 PM</string>
+    <string name="store_price_guarantee">*Store Price Guarantee</string>
+    <string name="_100_money_back_guarantee_terms_and_conditions_apply">*100% Replacement Guarantee (Terms and Conditions Apply)</string>
+    <string name="continue_shopping">Continue Shopping</string>
+    <string name="proceed_to_payment">Proceed to Payment</string>
+    <string name="delivery_address">Delivery Address</string>
+    <string name="delivery_date_and_time">Delivery Date and Time</string>
+    <string name="PKR_250">PKR 250</string>
+    <string name="nestle_fruita_vitals_pineapple">Nestle Fruita Vitals Pineapple</string>
+    <string name="nestle_fruita_vitals_pineapple_juice">Nestle Fruita Vitals Pineapple Juice</string>
+    <string name="_200ml">200ml</string>
+    <string name="rs_35">Rs 35</string>
+    <string name="add">ADD</string>
+    <string name="total_products">Total products</string>
+    <string name="item_count">4</string>
+    <string name="sub_total">Sub total</string>
+    <string name="rs_150">Rs 150</string>
+    <string name="delivery_charges">Delivery charges</string>
+    <string name="rs_100">Rs 100</string>
+    <string name="proceed_to_checkout">Proceed to checkout</string>
+    <string name="rs_250">Rs 250</string>
+    <string name="view_4_items">View 4 Items</string>
+    <string name="name_of_item">Name of Item</string>
+    <string name="_1_piece">1 Piece</string>
+    <string name="price_of_item">Price of Item</string>
+    <string name="item_description">Item Description</string>
 </resources>
